# llmtrace

./: .dockerignore  .env.example  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODING_AGENT.md  CONTRIBUTING.md  Cargo.toml  DASHBOARD_FEATURES.md  Dockerfile  Justfile  LICENSE  RALPH_LOOPS.md  README.md  SECURITY.md  TODO.md  compose.yaml  config.example.yaml  deny.toml  docker-compose.yml  llmtrace.db-shm  llmtrace.db-wal
.cargo/: audit.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
benchmarks/: Cargo.toml  README.md
benchmarks/analysis/tables/: tab1_baseline_metrics.tex  tab2_truncation_comparison.tex  tab3_boundary_summary.tex  tab4_checkpoint_strategies.tex  tab5_recalibration_comparison.tex  tab6_direction_analysis.tex
benchmarks/benches/: code_security.rs  fpr_calibration.rs  over_defense.rs
benchmarks/datasets/: benign_samples.json  injection_samples.json  notinject_samples.json
benchmarks/results/: benchmark_results.json  benchmark_results_2026-02-20.json  boundary_experiment.json  boundary_samples.csv  eval_results.jsonl  proxy_stress_test.json  proxy_stress_test_v2.json  recalibration_experiment.json  recalibration_levels.csv
benchmarks/results/live/live_20260220_000234/: ab_full_malicious_report.md  ab_full_malicious_rows.csv  ab_full_malicious_summary.json  direct_full_malicious_rows.json  sse_direct_rows.json  sse_proxy_rows.json
benchmarks/results/live/live_20260220_004301/: RUN_ID.txt  ab_full_malicious_report.md  ab_full_malicious_summary.json  category_code_provenance.json  direct_full_malicious_rows.json  direct_full_malicious_rows.partial.json  latency_attack_pattern_summary.json  latency_root_cause_by_attack_pattern.html  latency_root_cause_by_attack_pattern.md  live_config_snapshot.json  proxy_full_malicious_rows.json  proxy_full_malicious_rows.partial.json  proxy_run_meta.json  report_view.html
benchmarks/scripts/: analyze_experiments.py  download_datasets.py  download_training_datasets.py  download_v2_datasets.py  export_jsonl.py  proxy_stress_test.py  proxy_stress_test_v2.py  requirements.txt
benchmarks/src/: lib.rs  main.rs  regression.rs  train_fusion.rs
benchmarks/src/datasets/: mod.rs
benchmarks/src/experiments/: boundary.rs  checkpoint.rs  mod.rs  recalibration.rs  truncation.rs  types.rs
benchmarks/src/metrics/: mod.rs
benchmarks/src/runners/: cyberseceval2.rs  mod.rs  notinject.rs
benchmarks/src/training/: data.rs  metrics.rs  mod.rs  precompute.rs  trainer.rs
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js
bindings/node/__tests__/: index.test.ts
bindings/node/src/: lib.rs
config/: pricing.yaml
crates/llmtrace-core/: Cargo.toml
crates/llmtrace-nodejs/: .npmignore  Cargo.toml  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
crates/llmtrace-nodejs/__tests__/: index.test.ts
crates/llmtrace-proxy/: Cargo.toml  build.rs
crates/llmtrace-proxy/src/: alerts.rs  anomaly.rs  api.rs  auth.rs  circuit_breaker.rs  compliance.rs  config.rs  cost.rs  cost_caps.rs  enforcement.rs  grpc.rs  lib.rs  main.rs  metrics.rs  openapi.rs  otel.rs  provider.rs  proxy.rs  rate_limit.rs  shutdown.rs  streaming.rs  tenant_api.rs
crates/llmtrace-proxy/tests/: integration_test.rs
crates/llmtrace-python/: Cargo.toml  pyproject.toml
crates/llmtrace-python/src/: lib.rs
crates/llmtrace-python/tests/: test_python.py
crates/llmtrace-sdk/: Cargo.toml
crates/llmtrace-sdk/src/: lib.rs
crates/llmtrace-security/: Cargo.toml
crates/llmtrace-security/src/: action_correlator.rs  action_policy.rs  adversarial_defense.rs  canary.rs  code_security.rs  device.rs  encoding.rs  ensemble.rs  feature_extraction.rs  fpr_calibration.rs  fpr_monitor.rs  fusion_classifier.rs  hallucination_detector.rs  inference_stats.rs  injecguard.rs  jailbreak_detector.rs  lib.rs  mcp_monitor.rs  ml_detector.rs  multi_agent.rs  multi_model_ensemble.rs  ner_detector.rs  normalise.rs  output_analyzer.rs  piguard.rs  pii_validation.rs  prompt_guard.rs  result_parser.rs  session_analyzer.rs  thresholds.rs  tool_firewall.rs  tool_registry.rs  toxicity_detector.rs
crates/llmtrace-security/tests/: owasp_llm_top10.rs
crates/llmtrace-storage/: Cargo.toml
crates/llmtrace-storage/migrations/postgres/: 001_initial_schema.sql  002_cascade_delete.sql  003_add_tenant_api_token.sql  004_add_monitoring_scope.sql  005_compliance_reports.sql
crates/llmtrace-storage/migrations/sqlite/: 001_initial_schema.sql  002_metadata_tables.sql  003_add_agent_actions.sql  004_compliance_reports.sql  005_add_tenant_api_token.sql  006_add_monitoring_scope.sql
crates/llmtrace-storage/src/: cache.rs  clickhouse.rs  lib.rs  memory.rs  migration.rs  postgres.rs  redis_cache.rs  sqlite.rs
crates/llmtrace-wasm/: Cargo.toml
crates/llmtrace-wasm/src/: cost.rs  lib.rs
dashboard/: .gitignore  Dockerfile  TESTING.md  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
dashboard/e2e/: dashboard.spec.ts  feature-gaps.spec.ts  proxy-lifecycle.spec.ts  tenants-rbac.spec.ts
dashboard/playwright-report/: index.html
dashboard/scripts/: capture-guide-snapshots.mjs
dashboard/test-results/: .last-run.json
deployments/basilica/: .env.example  .gitignore  (+4 more)
docs/: FEATURE_ROADMAP.md  IMPLEMENTATION_TODO.md  RALPH_LOOPS.md  README.md  TODO.md
examples/: README.md  basic_proxy.sh  config-cost-control.yaml  config-high-security.yaml  config-minimal.yaml  config-production.yaml  python_sdk.py  security_test.sh
llmtrace-core/: Cargo.toml
llmtrace-core/src/: lib.rs
llmtrace-proxy/: Cargo.toml
llmtrace-proxy/src/: main.rs
llmtrace-python/: Cargo.toml
llmtrace-python/src/: lib.rs
llmtrace-sdk/: Cargo.toml
llmtrace-sdk/src/: lib.rs
llmtrace-security/: Cargo.toml
llmtrace-security/src/: lib.rs
perf_test/: README.md
proto/: llmtrace.proto
scripts/: build.sh  bump-version.sh  install.sh  llmtrace_e2e_overhead_bench.py  push.sh  release.sh
tests/: test_python.py
(+135 files in other folders)
