[workspace]
resolver = "2"

members = [
    "crates/llmtrace-core",
    "crates/llmtrace-proxy",
    "crates/llmtrace-sdk",
    "crates/llmtrace-storage",
    "crates/llmtrace-security",
    "crates/llmtrace-python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["LLMTrace Contributors"]
repository = "https://github.com/example/llmtrace"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"