[workspace]
resolver = "2"
exclude = ["crates/llmtrace-nodejs"]

members = [
    "crates/llmtrace-core",
    "crates/llmtrace-proxy",
    "crates/llmtrace-sdk",
    "crates/llmtrace-storage",
    "crates/llmtrace-security",
    "crates/llmtrace-python",
    "crates/llmtrace-wasm",
    "benchmarks",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Evangelos Pappas <epappas@evalonlabs.com>"]
repository = "https://github.com/epappas/llmtrace"
homepage = "https://llmtrace.io"

[workspace.dependencies]
llmtrace-core = { path = "crates/llmtrace-core", version = "0.1.3" }
llmtrace-storage = { path = "crates/llmtrace-storage", version = "0.1.3" }
llmtrace-security = { path = "crates/llmtrace-security", version = "0.1.3" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"