[package]
name = "llmtrace-benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Comprehensive benchmark suite for LLMTrace security analysis"

[dependencies]
llmtrace-core = { path = "../crates/llmtrace-core" }
llmtrace-security = { path = "../crates/llmtrace-security" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "over_defense"
harness = false
