[package]
name = "llmtrace-benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Comprehensive benchmark suite for LLMTrace security analysis"

[[bin]]
name = "benchmarks"
path = "src/main.rs"

[[bin]]
name = "train-fusion"
path = "src/train_fusion.rs"

[features]
default = []
cuda = ["llmtrace-security/cuda"]
metal = ["llmtrace-security/metal"]

[dependencies]
llmtrace-core = { path = "../crates/llmtrace-core" }
llmtrace-security = { path = "../crates/llmtrace-security", features = ["ml"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rand = "0.8"
rand_chacha = "0.3"
candle-core = "0.9"
candle-nn = "0.9"
safetensors = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "over_defense"
harness = false

[[bench]]
name = "fpr_calibration"
harness = false
