[package]
name = "llmtrace-nodejs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Evangelos Pappas <epappas@evalonlabs.com>"]
repository = "https://github.com/example/llmtrace"
description = "Native Node.js bindings for LLMTrace via NAPI-RS"

[lib]
crate-type = ["cdylib"]

[dependencies]
llmtrace-core = { path = "../llmtrace-core" }
llmtrace-security = { path = "../llmtrace-security" }
napi = { version = "2", features = ["napi9", "serde-json"] }
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
