[package]
name = "llmtrace-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Python bindings for LLMTrace via PyO3"

[lib]
name = "llmtrace_python"
crate-type = ["cdylib"]

[dependencies]
llmtrace-core = { path = "../llmtrace-core" }
pyo3 = { version = "0.23", features = ["extension-module"] }
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
