[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "llmtrace-python"
version = "0.1.0"
description = "Python bindings for LLMTrace — security-aware LLM observability"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
