[package]
name = "llmtrace-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Storage abstraction layer with SQLite backend and repository pattern"

[features]
default = []
clickhouse = ["dep:clickhouse"]
postgres = ["sqlx/postgres"]
redis_backend = ["dep:redis"]

[dependencies]
llmtrace-core = { path = "../llmtrace-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
dashmap = "6"
bytes = "1"
clickhouse = { version = "0.14", features = ["uuid", "chrono"], optional = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

[dev-dependencies]
tempfile = "3"
