[package]
name = "llmtrace-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WebAssembly bindings for browser-based LLMTrace security analysis"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
llmtrace-core = { path = "../llmtrace-core" }
llmtrace-security = { path = "../llmtrace-security" }
wasm-bindgen = "0.2"
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
